# scoring-karaoke

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakeLists_library.txt  DEPLOYMENT.md  EXPLANATION.md  INPUT_REQUIREMENTS.md  INPUT_SUMMARY.md  INSTALLATION_GUIDE.md  INTEGRATION_GUIDE.md  KaraokeScorer.cpp  KaraokeScorer.h  PIPELINE.md  QUICK_START.md  README.md  README_INTEGRATION.md  TEST_REPORT.md  TEST_RESULT_REAL_AUDIO.md  USAGE_GUIDE.md  example_usage.py  gui.py  inspect_midi.py  karaoke_scorer.py  library_interface.py  main.cpp  pitch_advisor.py  pitch_extractor.py  pitch_matcher.py  requirements.txt  run_gui.bat  run_gui.sh  test_cpp.cpp  test_library.py  test_midi_vocal_only.py  test_with_real_audio.py
example_external_project/: CMakeLists.txt  main.cpp
example_input/: example_usage.cpp
